# fleetq

./: Makefile  README.md  go.mod  go.sum
.devcontainer/: Dockerfile  devcontainer.json  kind-config.yaml
.github/workflows/: fluxion.yaml  main.yaml
client/py/: README.md  pyproject.toml
client/py/fleetq/: __init__.py  cli.py  io.py  jobspec.py  requires.py  select.py
client/py/tests/: test_select.py
cmd/fleetq/: client.go  flux_real_off.go  flux_real_on.go  flux_resource.go  main.go  matcher_dev.go  matcher_fluxion.go  multikv.go  serve.go  worker_dev.go  worker_fluxion.go
cmd/fleetq-benchfmt/: main.go
cmd/fleetq-datagen/: main.go
data/demo/: flux.software.json  k8s.software.json
data/quickstart/: alpha.containment.json  alpha.software.json  beta.containment.json  beta.software.json  gamma.containment.json  gamma.software.json
examples/: job-gromacs.json  job-hostname.json  job-k8s.json  job-lammps-kokkos.json  job-lammps.json
examples/demo/: README.md  demo.sh
pkg/api/: api.go
pkg/cluster/: driver.go  emulator.go  emulator_test.go  flux_cgo.go  flux_cgo_test.go  flux_driver.go  k8s_driver.go  k8s_driver_test.go
pkg/graph/: build.go  graph.go  jgf.go
pkg/jobspec/: flux.go  flux_test.go  jobspec.go
pkg/manager/: manager.go  manager_test.go  pipeline.go  pipeline_test.go  river.go  river_sqlite_test.go  validate.go  validate_test.go
pkg/matcher/: conformance_fluxion_test.go  conformance_test.go  fluxion.go  fluxion_worker.go  matcher.go  sim.go  subsystem_test.go
pkg/policy/: policy.go  policy_test.go
pkg/queue/: postgres.go  queue.go  (+1 more)
(+14 files in other folders)
