[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fleetq-client"
version = "0.1.0"
description = "fleetq Python client. Subcommands author and (later) submit jobs; `select` chooses the best container per application."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["behalf>=0.1", "anyio>=4"]

[project.optional-dependencies]
claude = ["behalf[claude]>=0.1"]
gemini = ["behalf[gemini]>=0.1"]
aws    = ["behalf[aws]>=0.1"]
dev    = ["pytest>=8"]

[project.scripts]
fleetq-select = "fleetq.cli:select_entry"

[tool.setuptools.packages.find]
include = ["fleetq*"]
